--- a/week12/3dpaint/mainwindow.ui
+++ b/week12/3dpaint/mainwindow.ui
@@ -52,26 +52,60 @@
    </widget>
    <addaction name="menuFILE"/>
   </widget>
-  <widget class="QToolBar" name="mainToolBar">
+  <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QToolBar" name="maintoolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+   <addaction name="actionILoad"/>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
   <action name="actionLoad">
    <property name="text">
     <string>Load</string>
    </property>
   </action>
+  <action name="actionILoad">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/images/resources/load.png</normaloff>:/images/resources/load.png</iconset>
+   </property>
+   <property name="text">
+    <string>iLoad</string>
+   </property>
+   <property name="toolTip">
+    <string>Load</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>actionLoad</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>load()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>649</x>
+     <y>364</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionILoad</sender>
    <signal>triggered()</signal>
    <receiver>MainWindow</receiver>
    <slot>load()</slot>
